--- a/translator/core/pom.xml
+++ b/translator/core/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-translator</artifactId>
-        <version>21.9.0</version>
+        <version>21.9.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-translator-core</artifactId>
