--- a/bot/admin/web/pom.xml
+++ b/bot/admin/web/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>ai.tock</groupId>
     <artifactId>tock-bot-admin</artifactId>
-    <version>21.9.1-SNAPSHOT</version>
+    <version>21.9.1</version>
   </parent>
 
   <artifactId>tock-bot-admin-web</artifactId>
