--- a/stt/google-speech/pom.xml
+++ b/stt/google-speech/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-stt</artifactId>
-        <version>21.9.1-SNAPSHOT</version>
+        <version>21.9.1</version>
     </parent>
 
     <artifactId>tock-stt-google-speech</artifactId>
