--- a/bot/admin/pom.xml
+++ b/bot/admin/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>21.9.1</version>
+        <version>21.9.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-admin</artifactId>
