--- a/bot/chatbase/pom.xml
+++ b/bot/chatbase/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>tock-bot</artifactId>
         <groupId>ai.tock</groupId>
-        <version>21.9.2</version>
+        <version>21.9.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
