--- a/stt/pom.xml
+++ b/stt/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-root</artifactId>
-        <version>21.9.2</version>
+        <version>21.9.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-stt</artifactId>
