--- a/translator/google-translate/pom.xml
+++ b/translator/google-translate/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-translator</artifactId>
-        <version>22.9.1-SNAPSHOT</version>
+        <version>22.9.1</version>
     </parent>
 
     <artifactId>tock-translator-google</artifactId>
