--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -78,18 +78,18 @@
     "@angular/compiler-cli": "^11.2.2",
     "@angular/language-service": "^11.2.2",
     "@types/file-saver-es": "^2.0.1",
-    "@types/jasmine": "^3.7.0",
+    "@types/jasmine": "^4.3.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "jasmine-core": "^4.4.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "^2.2.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "prettier": "2.6.2",
     "protractor": "~7.0.0",
     "resize-observer-polyfill": "^1.5.1",
