--- a/bot/dialog-manager/core/pom.xml
+++ b/bot/dialog-manager/core/pom.xml
@@ -126,6 +126,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
             <groupId>black.ninia</groupId>
             <artifactId>jep</artifactId>
             <version>${jep.version}</version>
