--- a/bot/admin/web/angular.json
+++ b/bot/admin/web/angular.json
@@ -25,14 +25,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets", "src/img"],
-            "styles": [
-              "src/app/theme/styles/styles.scss",
-              "src/styles.css",
-              "node_modules/ionicons/scss/ionicons.scss",
-              "node_modules/nebular-icons/scss/nebular-icons.scss",
-              "node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
-              "src/jsoneditor.css"
-            ],
+            "styles": ["src/app/theme/styles/styles.scss", "src/styles.css", "src/jsoneditor.css"],
             "scripts": [
               "node_modules/cytoscape/dist/cytoscape.min.js",
               "node_modules/webcola/WebCola/cola.min.js",
@@ -120,31 +113,6 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
-            "exclude": ["**/node_modules/**"]
-          }
-        }
-      }
-    },
-    "bot-e2e": {
-      "root": "e2e/",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "bot:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "bot:serve:production"
-            }
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
             "exclude": ["**/node_modules/**"]
           }
         }
