--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -8,90 +8,66 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
     "mavenbuild": "ng build --prod --aot"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.2",
-    "@angular/cdk": "11.2.1",
-    "@angular/common": "^11.2.2",
-    "@angular/compiler": "^11.2.2",
-    "@angular/core": "^11.2.2",
-    "@angular/forms": "^11.2.2",
-    "@angular/localize": "^11.2.2",
-    "@angular/material": "11.2.1",
-    "@angular/platform-browser": "^11.2.2",
-    "@angular/platform-browser-dynamic": "^11.2.2",
-    "@angular/router": "^11.2.2",
-    "@nebular/eva-icons": "7.0.0",
-    "@nebular/theme": "7.0.0",
-    "@ng-bootstrap/ng-bootstrap": "8.0.0",
+    "@angular/animations": "^12.2.17",
+    "@angular/cdk": "12.2.13",
+    "@angular/common": "^12.2.17",
+    "@angular/compiler": "^12.2.17",
+    "@angular/core": "^12.2.17",
+    "@angular/forms": "^12.2.17",
+    "@angular/localize": "^12.2.17",
+    "@angular/material": "12.2.13",
+    "@angular/platform-browser": "^12.2.17",
+    "@angular/platform-browser-dynamic": "^12.2.17",
+    "@angular/router": "^12.2.17",
+    "@nebular/eva-icons": "8.0.0",
+    "@nebular/theme": "8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "ang-jsoneditor": "^1.10.5",
-    "angular-google-charts": "1.1.4",
+    "angular-google-charts": "^2.2.2",
     "bootstrap": "^4.4.1",
-    "ckeditor4": "^4.17.0",
-    "classlist.js": "1.1.20150312",
-    "core-js": "^2.6.11",
     "cose-base": "^2.1.0",
-    "cytoscape": "^3.21.1",
-    "cytoscape-cola": "^2.3.1",
+    "cytoscape": "^3.23.0",
+    "cytoscape-cola": "^2.5.1",
     "cytoscape-cose-bilkent": "^4.1.0",
-    "cytoscape-dagre": "^2.2.2",
+    "cytoscape-dagre": "^2.5.0",
     "echarts": "^5.3.3",
-    "eva-icons": "^1.1.3",
     "file-saver-es": "^2.0.5",
     "html2pdf.js": "^0.10.1",
-    "intl": "1.2.5",
-    "ionicons": "2.0.1",
     "jsoneditor": "^9.5.6",
-    "leaflet": "1.2.0",
     "material-design-icons-iconfont": "^5.0.1",
-    "moment": "^2.29.3",
-    "nebular-icons": "1.1.0",
-    "ng2-charts": "^2.4.2",
-    "ng2-ckeditor": "^1.2.7",
-    "ng2-completer": "^3.0.3",
     "ng2-file-upload": "^1.4.0",
-    "ngx-echarts": "^5.2.2",
+    "ngx-echarts": "^7.0.0",
     "ngx-infinite-scroll": "^8.0.2",
     "ngx-moment": "^5.0.0",
     "normalize.css": "6.0.0",
-    "pace-js": "1.0.2",
-    "roboto-fontface": "0.8.0",
     "rxjs": "6.6.3",
-    "rxjs-compat": "6.3.0",
-    "rxjs-tslint": "^0.1.8",
-    "socicon": "3.0.5",
     "tslib": "^2.0.0",
-    "typeface-exo": "0.0.22",
-    "web-animations-js": "^2.3.2",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.1",
-    "@angular/cli": "^11.2.1",
-    "@angular/compiler-cli": "^11.2.2",
-    "@angular/language-service": "^11.2.2",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular/cli": "^12.2.18",
+    "@angular/compiler-cli": "^12.2.17",
+    "@angular/language-service": "^12.2.17",
     "@types/file-saver-es": "^2.0.1",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "jasmine-core": "^4.4.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "prettier": "2.6.2",
-    "protractor": "~7.0.0",
-    "resize-observer-polyfill": "^1.5.1",
-    "stylelint": "^13.3.3",
     "ts-node": "3.2.2",
     "tslint": "~6.1.0",
-    "tslint-language-service": "^0.9.9",
-    "typescript": "4.1.5"
+    "typescript": "4.3.5"
   }
 }
