--- a/nlp/entity-evaluator/duckling/pom.xml
+++ b/nlp/entity-evaluator/duckling/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-entity-evaluator</artifactId>
-        <version>22.9.3</version>
+        <version>22.9.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-duckling</artifactId>
