--- a/nlp/model/pom.xml
+++ b/nlp/model/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp</artifactId>
-        <version>22.9.3</version>
+        <version>22.9.4-SNAPSHOT</version>
     </parent>
 
     <packaging>pom</packaging>
