--- a/nlp/model/shared/pom.xml
+++ b/nlp/model/shared/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-model</artifactId>
-        <version>22.9.3</version>
+        <version>22.9.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-model-shared</artifactId>
