--- a/bot/admin/web/pom.xml
+++ b/bot/admin/web/pom.xml
@@ -145,13 +145,13 @@
             </configuration>
           </execution>
           <execution>
-            <id>npm install</id>
+            <id>npm ci</id>
             <phase>process-resources</phase>
             <goals>
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>install -d --loglevel warn --force</arguments>
+              <arguments>ci -d --loglevel warn --force</arguments>
             </configuration>
           </execution>
           <execution>
