--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -44,6 +44,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.10",
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
     "@angular/cli": "^14.2.10",
     "@angular/compiler-cli": "^14.2.12",
     "@angular/language-service": "^14.2.12",
@@ -51,7 +56,9 @@
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "eslint": "^8.28.0",
     "jasmine-core": "^4.4.0",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.4.1",
@@ -61,7 +68,6 @@
     "karma-jasmine-html-reporter": "^2.0.0",
     "prettier": "2.6.2",
     "ts-node": "3.2.2",
-    "tslint": "~6.1.0",
-    "typescript": "4.6.4"
+    "typescript": "4.8"
   }
 }
