--- a/nlp/admin/web/tsconfig.json
+++ b/nlp/admin/web/tsconfig.json
@@ -3,15 +3,23 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+    // "noImplicitOverride": true,
+    "importHelpers": true,
     "sourceMap": true,
     "declaration": false,
     "module": "es2020",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2020",
     "allowSyntheticDefaultImports": true,
+    "target": "es2020",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"]
+    "lib": ["es2020", "dom"]
+  },
+  "angularCompilerOptions": {
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true
+    // "strictTemplates": true
   }
 }
