--- a/bot/connector-twitter/pom.xml
+++ b/bot/connector-twitter/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>tock-bot</artifactId>
         <groupId>ai.tock</groupId>
-        <version>22.9.4</version>
+        <version>22.9.5-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
