--- a/nlp/model/rasa/pom.xml
+++ b/nlp/model/rasa/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-model</artifactId>
-        <version>22.9.4</version>
+        <version>22.9.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-model-rasa</artifactId>
