--- a/bot/connector-whatsapp/pom.xml
+++ b/bot/connector-whatsapp/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>22.9.5</version>
+        <version>22.9.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-connector-whatsapp</artifactId>
