--- a/nlp/entity-evaluator/duckling/client/pom.xml
+++ b/nlp/entity-evaluator/duckling/client/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-duckling</artifactId>
-        <version>22.9.5</version>
+        <version>22.9.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-duckling-client</artifactId>
