--- a/bot/connector-iadvize/pom.xml
+++ b/bot/connector-iadvize/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>22.9.6-SNAPSHOT</version>
+        <version>23.3.0</version>
     </parent>
 
     <artifactId>tock-bot-connector-iadvize</artifactId>
