--- a/bot/api/websocket/pom.xml
+++ b/bot/api/websocket/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot-api</artifactId>
-        <version>23.3.0</version>
+        <version>23.3.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-api-websocket</artifactId>
