--- a/bot/admin/test/core/pom.xml
+++ b/bot/admin/test/core/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot-admin-test</artifactId>
-        <version>23.3.2</version>
+        <version>23.3.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-admin-test-core</artifactId>
