--- a/nlp/api/doc/pom.xml
+++ b/nlp/api/doc/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-api</artifactId>
-        <version>23.3.2</version>
+        <version>23.3.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-api-doc</artifactId>
