--- a/bot/llm/rag-core/pom.xml
+++ b/bot/llm/rag-core/pom.xml
@@ -53,6 +53,10 @@
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+        </dependency>
     </dependencies>
 
 
